--- a/code2.html
+++ b/code2.html
@@ -82,7 +82,7 @@
         <body>
             <div id="doreamon">
             <img width="200px" src=" https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcSUiX0XzPJBRDXLxWyV3aVO3rJPTiCVd9d9oGSVj21hv6qbPF_nzLh52DYxA5Jc4ZW-La8Fay7loomnZ8LMYJ01gORCDsj1osQlvJ9VTSGNB6QNlxxzQDcXyg&usqp=CAE">
-            <h1><b>BLACK HOODIE</b></h1>
+            <h1><b>BLACK<br> HOODIE</b></h1>
             <p>Get the best one of your choice<br>
             <b> $ 17.98 </b></p>
             <button id="sweet">ADD TO CART</button>
