--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ Z
 
     <h1>8. The world’s oldest song:</h1>
    <p> <a href="https://www.youtube.com/watch?v=9c-hmFN610g">The Hurrian Hymn No.6</a>is considered the world’s oldest song. It was sung about more than 3400 years ago. The song is said to be a rhyme of an ancient goddess Nikkai. It was composed in the 14th century. The tunes of the song were discovered in clay tablets. It was excavated in the 1950s.</p>
+   <i class="fa-duotone fa-user fa-beat"></i>
 
 
 </body>
